[metadata]
name = cyber siege
version = 1.0
description = Tower Defense with Cybersecurity theme
long_description = Tower Defense game created for educations purposes. It features Cybersecurity aspects.
license = Your license here
classifiers =
    Programming Language :: Python :: 3 

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    structlog

[options.package_data]
tower.assets.gfx = *.png
tower.assets.audio = *.wav, *.ogg
tower.assets.levels = *.json

[options.entry_points]
console_scripts =
    tower = tower.main:main